# merlin

./: .gitignore  .gitmodules  LICENSE  README.md  UNDERSTANDING.md  build_iree_release_perf.sh  env_linux.yml  iree_runtime_plugin.cmake
experimental/control_flow/: CMakeLists.txt  find_oracle_path.py  main.cpp  model_ops.py  onnx_graphs_from_ops.py  orchestrator_module.cc  orchestrator_module.h
experimental/control_flow/models/: sensor_input.npy
experimental/control_flow/models/phases_combined/: combined.input.mlir  integrated_robot_application.10.executable-targets.mlir  integrated_robot_application.11.hal.mlir  integrated_robot_application.12.vm.mlir  integrated_robot_application.2.abi.mlir  integrated_robot_application.3.preprocessing.mlir  integrated_robot_application.4.global-optimization.mlir  integrated_robot_application.5.dispatch-creation.mlir  integrated_robot_application.6.flow.mlir  integrated_robot_application.7.stream.mlir  integrated_robot_application.8.executable-sources.mlir  integrated_robot_application.9.executable-configurations.mlir  op_a.1.input.mlir  op_b.1.input.backup.mlir  op_b_step.1.input.mlir  op_c.1.input.mlir  op_d.1.input.mlir  op_e.1.input.mlir
experimental/control_flow/models/phases_separated/: op_a.mlir  op_a.onnx  op_b.mlir  op_b.onnx  op_b_step.mlir  op_b_step.onnx  op_c.mlir  op_c.onnx  op_d.mlir  op_d.onnx  op_e.mlir  op_e.onnx
experimental/control_flow/models/phases_static_trace/: static_trace.10.executable-targets.mlir  static_trace.11.hal.mlir  (+11 more)
experimental/mlir_tinyMPC/: CMakeLists.txt  main.cpp  tinyMPC.mlir
(+1717 files in other folders)
